# bazel-seminar

./: .gitignore  Dockerfile  README.md
.github/: CODEOWNERS
workshop/: slides.html  slides.md
workshop/01_simple/: .bazelrc  BUILD.bazel  Hello.hs  MyLib.hs  Test.hs  WORKSPACE
workshop/02_haskell/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  stackage_snapshot.json
workshop/02_haskell/src/: Foo.hs
workshop/03_haskell-gazelle/: BUILD.bazel  README.md  WORKSPACE  bazel-haskell-project.cabal  notes  stackage_snapshot.json
workshop/03_haskell-gazelle/app/: Main.hs
workshop/03_haskell-gazelle/src/: Bar.hs
workshop/03_haskell-gazelle/test/: Main.hs
workshop/04_polyglot/: .bazelrc  BUILD.bazel  WORKSPACE  deps.bzl  notes  stackage_snapshot.json
workshop/04_polyglot/go/: BUILD.bazel  codegen.bzl  go.mod  go.sum  template.in
workshop/04_polyglot/go/server/: .gitignore
workshop/04_polyglot/go/server/restapi/: configure_logging_api.go
workshop/04_polyglot/haskell/: Api.hs  BUILD.bazel  Client.hs  Swagger.hs  Test.hs
workshop/04_polyglot/swagger/: BUILD.bazel
