load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

pkg_files(
    name = "binaries",
    srcs = ["//go/server/cmd/logging-api-server"],
    prefix = "bin",
)

pkg_tar(
    name = "logapi_tgz",
    srcs = [
        ":binaries",
        "//swagger",
    ],
    extension = "tgz",
    package_dir = "logapi",
    package_file_name = "logapi.tgz",
    stamp = 1,
)
